@@ -1,3 +1,7 @@
+version 20070915_1
+Added the CNF_DEFAULT_PAGE_FORMAT variable, which lets you specify
+either text or creole.
+
 version 20070914_1
 Made creole tables sortable.
 
